TEST_PROGRAMS/INVALID/jacob_errington/var-typo.min
varhi : string;
# forgot the space after 'var'

